infra/k8s/tasks.yaml
apiVersion: v1
kind: Pod
metadata:
  name: tasks
spec:
  containers:
    - name: tasks
      image: doit/tasks:0.0.1
      imagePullPolicy: Never
