infra/k8s/events-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
      containers:
        - name: events
          image: doit/events:0.0.1

---
apiVersion: v1
kind: Service
metadata:
  name: events-srv
spec:
  type: ClusterIP # default service type is cluster Ip for type in Servive
  selector:
    app: events # map pod with label events
  ports:
    - name: events
      protocol: TCP
      port: 4005
      targetPort: 4005
# Adding cluster service to events
