infra/k8s/tasks-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasks-depl
spec:
  replicas: 1 # number of replicas of pods
  selector: # helps deployment to manage created pods by matching the labels provided
    matchLabels:
      app: tasks
  template: # specifies congif of exact pods we wand to create
    metadata:
      labels:
        app: tasks
    spec:
      containers:
        - name: tasks
          image: doit/tasks:0.0.1

---
apiVersion: v1
kind: Service
metadata:
  name: task-cl-srv #name should be unique among the services else kubernetes think you are trying to overwrite other  servicess
spec:
  type: ClusterIP
  selector:
    app: tasks
  ports:
    - name: tasks
      protocol: TCP
      port: 4000
      targetPort: 4000
