infra/k8s/tasks-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasks-srv
spec:
  type: NodePort
  selector:
    app: tasks
  ports:
    - name: tasks
      protocol: TCP
      port: 4000
      targetPort: 4000
