infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: doit.io
      http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          - path: /tasks/create
            pathType: Prefix
            backend:
              service:
                name: task-cl-srv
                port:
                  number: 4000
          - path: /tasks/?(.*)/subtasks
            pathType: Prefix
            backend:
              service:
                name: subtasks-srv
                port:
                  number: 4001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: client-srv
                port:
                  number: 3000
